fix permission error when using i18n-editor